# DocGen

./: .pre-commit-config.yaml  Code_changer_test.py  Parser_test.py  README.md  ai_requester.py  code_changer.py  console.py  example.py  parser.py  pyproject.toml  setup.cfg
Tests/: code_changer_test.py  parser_test.py
docgen/: __init__.py  ai_requester.py  code_changer.py  console.py  parser.py  records.py
fiit_docgen/: __init__.py  ai_requester.py  code_changer.py  console.py  parser.py  records.py
