[project]
name = "docgen"
version = "1.0.0"
description = "DocGen. Easy generate documentation to your code"

[tool.poetry]
authors = ["Alex Spirin", "Alexandra Izmailova", "Timofey Erjov", "Ivan Malgin", "Nikita Raskovalov"]

[tool.poetry.dependencies]
python = ">=3.12, <4.0"
requests = ">=2.32.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3"
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[project.scripts]
docgen = "docgen.console:main"

[tool.black]
line-length = 120
target-version = ['py312', 'py313']
skip-string-normalization = true

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]

[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv"]
show-source = true

[tool.mypy]
python_version = 3.12
enable_error_code = ["truthy-bool", "ignore-without-code"]
check_untyped_defs = true
strict_optional = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true
ignore_missing_imports = true
follow_imports = "normal"
follow_imports_for_stubs = true
